<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="user" type="org.m2design.militaryconnect.model.User"/>
    </data>
    
    <android.support.constraint.ConstraintLayout
        android:id="@+id/layout_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent" tools:context="org.m2design.militaryconnect.LoginActivity">

        <TextView
            android:id="@+id/tv_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_login"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Title"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.14999998"/>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp" android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_login">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email_address" android:inputType="textEmailAddress"
                android:singleLine="true"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp" android:layout_marginStart="8dp"
            android:layout_marginTop="16dp" android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/et_email"
            tools:visibility="visible">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:hint="@string/username"
                android:inputType="textCapWords" android:singleLine="true"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp" android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@+id/et_username">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{user.password}"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:singleLine="true"/>
        </android.support.design.widget.TextInputLayout>
        <Button
            android:id="@+id/btn_register"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="0dp"
            android:layout_marginStart="0dp"
            android:layout_marginTop="16dp"
            android:text="@string/create_account"
            android:textSize="16sp"
            android:textColor="@color/colorLinks"
            android:textAllCaps="false"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="@+id/btn_login"
            app:layout_constraintStart_toStartOf="@+id/btn_login"
            app:layout_constraintTop_toBottomOf="@+id/btn_login"/>
        <Button
            android:id="@+id/btn_login"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/login"
            android:visibility="visible"
            app:layout_constraintEnd_toEndOf="@+id/et_password"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/et_password"
            app:layout_constraintStart_toStartOf="@+id/et_password" android:layout_marginStart="8dp"/>
        <Button
            android:id="@+id/btn_cancel"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="128dp"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/cancel" android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_create"
            app:layout_constraintStart_toStartOf="@+id/et_password"/>
        <Button
            android:id="@+id/btn_create"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:text="@string/create"
            android:visibility="gone" app:layout_constraintBaseline_toBaselineOf="@+id/btn_cancel"
            app:layout_constraintEnd_toEndOf="@+id/et_password"
            app:layout_constraintStart_toEndOf="@+id/btn_cancel"/>

    </android.support.constraint.ConstraintLayout>
</layout>
